--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "recharts": "^2.15.3",
     "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
