--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.3",
     "react-hot-toast": "^2.5.2",
+    "react-spinners": "^0.17.0",
     "recharts": "^2.15.3",
     "tailwind-merge": "^3.2.0",
     "zod": "^3.24.4"
