--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-select": "^2.2.4",
-    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
@@ -34,6 +34,7 @@
     "date-fns": "^3.6.0",
     "html2pdf.js": "^0.10.3",
     "lucide-react": "^0.507.0",
+    "motion": "^12.23.24",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-day-picker": "^9.7.0",
