--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@radix-ui/react-use-controllable-state": "^1.2.2",
     "@react-pdf/renderer": "^4.3.1",
+    "@serwist/next": "^9.5.6",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.4",
@@ -38,7 +39,6 @@
     "lucide-react": "^0.507.0",
     "motion": "^12.23.26",
     "next": "15.3.8",
-    "next-pwa": "^5.6.0",
     "react": "^19.0.0",
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
@@ -47,6 +47,7 @@
     "react-icons": "^5.5.0",
     "react-spinners": "^0.17.0",
     "recharts": "^2.15.3",
+    "serwist": "^9.5.6",
     "tailwind-merge": "^3.2.0",
     "uuid": "^13.0.0",
     "workbox-window": "^7.4.0",
